NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

V1.00
- NEW : Added a presort option to sort easier the images
- NEW : Added Date/Time field to database and import it from EXIF, new sort option
- NEW : Multi Widgets to show links to Media RSS feeds
- NEW : PicLens support for galleries
- NEW : Copy/Move images between galleries 
- NEW : Media RSS feeds (either for galleries, albums or global)
- NEW : Image tag management
- NEW : Convert all shortcodes to WP shortcodes API
- NEW : AJAX based thumbnail generator
- NEW : Create output via template files, more flexible
- NEW : Extended role system. Each gallery has now a author
- NEW : [thumb id="4,5,12,..." caption="none|alttext|desc" 
            group="thumbnail-group" float="|left|right"/] 
        shortcode. You can now insert thumbnails for one or more images (that are not 
        necessarly inside the same gallery).
- NEW : [picture id="10" caption="none|alttext|desc" float="|left|right" 
            width="" height="" mode="|watermark|web20"]extra caption here[/picture]
        shortcode. You can now insert single picture with some effect, resized or not, 
        with or without caption.
- Changed : Widgets are now core and doesn't need to be activate, rework as Multi Widgets		
- Changed : Improved the gallery management page.
- Changed : Renammed the filter 'ngg_create_gallery_thumbcode' to 'ngg_get_thumbcode'.
- Changed : Convert tags to WP-Taxonomy tables, no more need for ngg_tags, ngg_pic2tags
- Changed : Arrange manage fields in a new way
- Changed : Support now SSL 
- Changed : Use JQuery UI instead of interface lib
- Changed : Updated to swfobject 2.1
- Bugfix : Changed CSS for singlepic padding to margin
- Bugfix : Check for zero in Exif Focal Length
- Bugfix : Round instead inval for square thumbnails
- Removed : Do not longer check for myGallery folders
- Removed : Use now PclZip from WP Core
- Removed : Wordpress 2.1 - 2.3 files deleted

V0.99 - 27.09.2008